<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.getstarted.LoginGetStartedFragment"
        android:background="#E9EFFF">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:src="@drawable/ic_login_top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView11"
            style="@style/noSleepTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="20dp" />

        <ImageView
            android:id="@+id/imageView10"
            style="@style/noSleepCloudIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cloud_logo_no_sleep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="104dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:lineHeight="26sp"
            android:text="@string/want_to_join_us"
            android:textColor="#404756"
            android:textFontWeight="700"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="111dp"
            android:src="@drawable/login_human_background_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="98dp"
            android:src="@drawable/login_backgorund_human"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="42dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:lineHeight="21sp"
            android:text="@string/_2165_person_meditating_right_now"
            android:textColor="#404756"
            android:textFontWeight="700"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/button2"
            style="@style/getStartedButtonStyle"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="108dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="76dp"
            android:backgroundTint="#E9EFFF"
            android:drawableLeft="@drawable/ic_google_icon"
            android:text="@string/join_with_google"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="#404756"
            app:strokeWidth="4sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/loginGetStartedButton"
            style="@style/getStartedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#E9EFFF"
            android:drawableLeft="@drawable/ic_email_icon"
            android:text="@string/join_with_mail"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="1.0"
            app:strokeWidth="0dp"
            tools:ignore="RtlHardcoded" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>